infrastructure/gitops/apps/platform/nucleus/service-discovery.yaml
---
# Source: omniverse-nucleus/templates/services/discovery.yaml
apiVersion: v1
kind: Service
metadata:
  name: nucleus-discovery
  namespace: omniverse-nucleus
  labels:
    app: nucleus-discovery
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  selector:
    app: nucleus-discovery
  ports:
    - name: discovery
      port: 3333
      targetPort: 3333
      appProtocol: tcp
---
# Source: omniverse-nucleus/templates/services/discovery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nucleus-discovery
  namespace: omniverse-nucleus
  labels:
    app: nucleus-discovery
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: nucleus-discovery
  template:
    metadata:
      labels:
        app: nucleus-discovery
    spec:
      serviceAccountName: nucleus
      imagePullSecrets:
        - name: ngc-pull-secret
      containers:
        - name: nucleus-discovery
          image: nvcr.io/nvidia/omniverse/nucleus-discovery:1.5.5
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 3333
          readinessProbe:
            tcpSocket:
              port: 3333
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 3333
            initialDelaySeconds: 180
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: crypto-secrets
              mountPath: /omni/secrets/SERVICE_TOKEN
              subPath: svc_reg_token
              readOnly: true
            - name: crypto-secrets
              mountPath: /omni/secrets/SERVICE_PUBLIC_KEY
              subPath: auth_root_of_trust_pub
              readOnly: true
      volumes:
        - name: crypto-secrets
          secret:
            secretName: crypto-secrets
