infrastructure/gitops/apps/platform/nucleus/service-tagging.yaml
---
# Source: omniverse-nucleus/templates/services/tagging.yaml
apiVersion: v1
kind: Service
metadata:
  name: nucleus-tagging
  namespace: omniverse-nucleus
  labels:
    app: nucleus-tagging
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  selector:
    app: nucleus-tagging
  ports:
    - name: tagging
      port: 3020
      targetPort: 3020
      appProtocol: tcp
---
# Source: omniverse-nucleus/templates/services/tagging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nucleus-tagging
  namespace: omniverse-nucleus
  labels:
    app: nucleus-tagging
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: nucleus-tagging
  template:
    metadata:
      labels:
        app: nucleus-tagging
    spec:
      serviceAccountName: nucleus
      imagePullSecrets:
        - name: ngc-pull-secret
      containers:
        - name: nucleus-tagging
          image: nvcr.io/nvidia/omniverse/nucleus-tagging:3.1.35
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 3020
          readinessProbe:
            tcpSocket:
              port: 3020
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 3020
            initialDelaySeconds: 180
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: data
              mountPath: /omni/data
              subPath: tags-db
            - name: data
              mountPath: /omni/log
              subPath: log/tagging
            - name: data
              mountPath: /omni/temp
              subPath: tmp/tagging
            - name: crypto-secrets
              mountPath: /omni/secrets/SERVICE_DISCOVERY_TOKEN
              subPath: svc_reg_token
              readOnly: true
            - name: crypto-secrets
              mountPath: /omni/secrets/SERVICE_AUTH_PUBLIC_KEY
              subPath: auth_root_of_trust_pub
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nucleus-data
        - name: crypto-secrets
          secret:
            secretName: crypto-secrets
