infrastructure/gitops/apps/platform/nucleus/routes.yaml
---
# Source: omniverse-nucleus/templates/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nucleus-navigator
  namespace: omniverse-nucleus
  labels:
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
  annotations:
    haproxy.router.openshift.io/timeout: 3600s
spec:
  host: nucleus.apps.g4h4d3j7q1c9f7m.cimo.p1.openshiftapps.com
  port:
    targetPort: web
  to:
    kind: Service
    name: nucleus-navigator
---
# Source: omniverse-nucleus/templates/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nucleus-api
  namespace: omniverse-nucleus
  labels:
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
  annotations:
    haproxy.router.openshift.io/timeout: 86400s
spec:
  host: nucleus.apps.g4h4d3j7q1c9f7m.cimo.p1.openshiftapps.com
  path: /omni/api
  port:
    targetPort: api
  to:
    kind: Service
    name: nucleus-api
---
# Source: omniverse-nucleus/templates/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nucleus-discovery
  namespace: omniverse-nucleus
  labels:
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
  annotations:
    haproxy.router.openshift.io/timeout: 3600s
spec:
  host: nucleus.apps.g4h4d3j7q1c9f7m.cimo.p1.openshiftapps.com
  path: /omni/discovery
  port:
    targetPort: discovery
  to:
    kind: Service
    name: nucleus-discovery
---
# Source: omniverse-nucleus/templates/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nucleus-auth
  namespace: omniverse-nucleus
  labels:
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
  annotations:
    haproxy.router.openshift.io/timeout: 3600s
spec:
  host: nucleus.apps.g4h4d3j7q1c9f7m.cimo.p1.openshiftapps.com
  path: /omni/auth
  port:
    targetPort: auth
  to:
    kind: Service
    name: nucleus-auth
---
# Source: omniverse-nucleus/templates/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nucleus-auth-login
  namespace: omniverse-nucleus
  labels:
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
  annotations:
    haproxy.router.openshift.io/rewrite-target: /
spec:
  host: nucleus.apps.g4h4d3j7q1c9f7m.cimo.p1.openshiftapps.com
  path: /omni/auth-login
  port:
    targetPort: auth-login
  to:
    kind: Service
    name: nucleus-auth
---
# Source: omniverse-nucleus/templates/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nucleus-search
  namespace: omniverse-nucleus
  labels:
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
  annotations:
    haproxy.router.openshift.io/timeout: 3600s
spec:
  host: nucleus.apps.g4h4d3j7q1c9f7m.cimo.p1.openshiftapps.com
  path: /omni/search
  port:
    targetPort: search
  to:
    kind: Service
    name: nucleus-search
---
# Source: omniverse-nucleus/templates/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nucleus-tagging
  namespace: omniverse-nucleus
  labels:
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
  annotations:
    haproxy.router.openshift.io/timeout: 3600s
spec:
  host: nucleus.apps.g4h4d3j7q1c9f7m.cimo.p1.openshiftapps.com
  path: /omni/tagging
  port:
    targetPort: tagging
  to:
    kind: Service
    name: nucleus-tagging
---
# Source: omniverse-nucleus/templates/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nucleus-lft
  namespace: omniverse-nucleus
  labels:
    app.kubernetes.io/part-of: omniverse-nucleus
    app.kubernetes.io/version: "2023.2.9"
  annotations:
    haproxy.router.openshift.io/timeout: 86400s
    haproxy.router.openshift.io/rewrite-target: /
spec:
  host: nucleus.apps.g4h4d3j7q1c9f7m.cimo.p1.openshiftapps.com
  path: /omni/lft
  port:
    targetPort: lft
  to:
    kind: Service
    name: nucleus-lft-lb
